Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16760

[Reg 4.0->4.1] Crash when setting Qt of currently used kit to None

XMLWordPrintable

      • open a qmake project
      • open kit settings
      • change Qt version of kit that is used by qmake project to None

      -> crash

      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0   libQmakeProjectManager_debug.dylib	0x000000011caf04be QmakeProjectManager::QMakeStep::allArguments(QtSupport::BaseQtVersion const*, bool) const + 590 (qmakestep.cpp:133)
      1   libQmakeProjectManager_debug.dylib	0x000000011caf2fe4 QmakeProjectManager::QMakeStep::effectiveQMakeCall() const + 548 (qmakestep.cpp:485)
      2   libQmakeProjectManager_debug.dylib	0x000000011caf504f QmakeProjectManager::QMakeStepConfigWidget::updateEffectiveQMakeCall() + 47 (qmakestep.cpp:820)
      3   libQmakeProjectManager_debug.dylib	0x000000011caf5b62 QmakeProjectManager::QMakeStepConfigWidget::qtVersionChanged() + 34 (qmakestep.cpp:634)
      4   libQmakeProjectManager_debug.dylib	0x000000011cb0028a QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QmakeProjectManager::QMakeStepConfigWidget::*)()>::call(void (QmakeProjectManager::QMakeStepConfigWidget::*)(), QmakeProjectManager::QMakeStepConfigWidget*, void**) + 122 (qobjectdefs_impl.h:141)
      5   libQmakeProjectManager_debug.dylib	0x000000011cb001e0 void QtPrivate::FunctionPointer<void (QmakeProjectManager::QMakeStepConfigWidget::*)()>::call<QtPrivate::List<>, void>(void (QmakeProjectManager::QMakeStepConfigWidget::*)(), QmakeProjectManager::QMakeStepConfigWidget*, void**) + 80 (qobjectdefs_impl.h:161)
      6   libQmakeProjectManager_debug.dylib	0x000000011cb00106 QtPrivate::QSlotObject<void (QmakeProjectManager::QMakeStepConfigWidget::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 166 (qobject_impl.h:121)
      7   org.qt-project.QtCore         	0x000000010f430d1a QMetaObject::activate(QObject*, int, int, void**) + 2538
      8   libProjectExplorer_debug.dylib	0x0000000117014915 ProjectExplorer::Target::kitChanged() + 37 (moc_target.cpp:396)
      9   libProjectExplorer_debug.dylib	0x0000000116dc7148 ProjectExplorer::Target::handleKitUpdates(ProjectExplorer::Kit*) + 168 (target.cpp:200)
      10  libProjectExplorer_debug.dylib	0x0000000116dd7525 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<ProjectExplorer::Kit*>, void, void (ProjectExplorer::Target::*)(ProjectExplorer::Kit*)>::call(void (ProjectExplorer::Target::*)(ProjectExplorer::Kit*), ProjectExplorer::Target*, void**) + 133 (qobjectdefs_impl.h:141)
      11  libProjectExplorer_debug.dylib	0x0000000116dd7470 void QtPrivate::FunctionPointer<void (ProjectExplorer::Target::*)(ProjectExplorer::Kit*)>::call<QtPrivate::List<ProjectExplorer::Kit*>, void>(void (ProjectExplorer::Target::*)(ProjectExplorer::Kit*), ProjectExplorer::Target*, void**) + 80 (qobjectdefs_impl.h:161)
      12  libProjectExplorer_debug.dylib	0x0000000116dd7396 QtPrivate::QSlotObject<void (ProjectExplorer::Target::*)(ProjectExplorer::Kit*), QtPrivate::List<ProjectExplorer::Kit*>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 166 (qobject_impl.h:121)
      13  org.qt-project.QtCore         	0x000000010f430d1a QMetaObject::activate(QObject*, int, int, void**) + 2538
      14  libProjectExplorer_debug.dylib	0x00000001170115fd ProjectExplorer::KitManager::kitUpdated(ProjectExplorer::Kit*) + 77 (moc_kitmanager.cpp:278)
      15  libProjectExplorer_debug.dylib	0x0000000116d8fbbd ProjectExplorer::KitManager::notifyAboutUpdate(ProjectExplorer::Kit*) + 93 (kitmanager.cpp:444)
      16  libProjectExplorer_debug.dylib	0x0000000116d5d1a4 ProjectExplorer::Kit::kitUpdated() + 68 (kit.cpp:651)
      17  libProjectExplorer_debug.dylib	0x0000000116d5d14c ProjectExplorer::Kit::unblockNotification() + 76 (kit.cpp:202)
      18  libProjectExplorer_debug.dylib	0x0000000116d68404 ProjectExplorer::KitGuard::~KitGuard() + 20 (kit.h:153)
      19  libProjectExplorer_debug.dylib	0x0000000116d60f25 ProjectExplorer::KitGuard::~KitGuard() + 21 (kit.h:153)
      20  libProjectExplorer_debug.dylib	0x0000000116d5d5a6 ProjectExplorer::Kit::copyFrom(ProjectExplorer::Kit const*) + 374 (kit.cpp:236)
      21  libProjectExplorer_debug.dylib	0x0000000116d98382 ProjectExplorer::Internal::KitManagerConfigWidget::apply() + 162 (kitmanagerconfigwidget.cpp:146)
      22  libProjectExplorer_debug.dylib	0x0000000116d9ec17 ProjectExplorer::Internal::KitModel::apply()::$_4::operator()(ProjectExplorer::Internal::KitNode*) const + 55 (kitmodel.cpp:219)
      23  libProjectExplorer_debug.dylib	0x0000000116d9eb3e void Utils::TreeItem::forSecondLevelChildren<ProjectExplorer::Internal::KitNode*, ProjectExplorer::Internal::KitModel::apply()::$_4>(ProjectExplorer::Internal::KitModel::apply()::$_4) const + 286 (treemodel.h:101)
      24  libProjectExplorer_debug.dylib	0x0000000116d9dddd void Utils::LeveledTreeModel<Utils::TreeItem, Utils::TreeItem, ProjectExplorer::Internal::KitNode>::forSecondLevelItems<ProjectExplorer::Internal::KitModel::apply()::$_4>(ProjectExplorer::Internal::KitModel::apply()::$_4 const&) const + 29 (treemodel.h:264)
      25  libProjectExplorer_debug.dylib	0x0000000116d9dc86 ProjectExplorer::Internal::KitModel::apply() + 38 (kitmodel.cpp:216)
      26  libProjectExplorer_debug.dylib	0x0000000116da4536 ProjectExplorer::KitOptionsPage::apply() + 70 (kitoptionspage.cpp:259)
      27  libCore_debug.dylib           	0x0000000115bccf5f Core::Internal::SettingsDialog::accept() + 239 (settingsdialog.cpp:655)
      28  libCore_debug.dylib           	0x0000000115bd6e6a QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Core::Internal::SettingsDialog::*)()>::call(void (Core::Internal::SettingsDialog::*)(), Core::Internal::SettingsDialog*, void**) + 122 (qobjectdefs_impl.h:141)
      29  libCore_debug.dylib           	0x0000000115bd6dc0 void QtPrivate::FunctionPointer<void (Core::Internal::SettingsDialog::*)()>::call<QtPrivate::List<>, void>(void (Core::Internal::SettingsDialog::*)(), Core::Internal::SettingsDialog*, void**) + 80 (qobjectdefs_impl.h:161)
      30  libCore_debug.dylib           	0x0000000115bd6ce6 QtPrivate::QSlotObject<void (Core::Internal::SettingsDialog::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 166 (qobject_impl.h:121)
      31  org.qt-project.QtCore         	0x000000010f430d1a QMetaObject::activate(QObject*, int, int, void**) + 2538
      32  org.qt-project.QtWidgets      	0x000000010e6801b5 QDialogButtonBoxPrivate::_q_handleButtonClicked() + 325
      33  org.qt-project.QtCore         	0x000000010f430f59 QMetaObject::activate(QObject*, int, int, void**) + 3113
      34  org.qt-project.QtWidgets      	0x000000010e64fc60 QAbstractButtonPrivate::emitClicked() + 112
      35  org.qt-project.QtWidgets      	0x000000010e64faf5 QAbstractButtonPrivate::click() + 229
      36  org.qt-project.QtWidgets      	0x000000010e650b80 QAbstractButton::mouseReleaseEvent(QMouseEvent*) + 272
      37  org.qt-project.QtWidgets      	0x000000010e59f603 QWidget::event(QEvent*) + 1571
      38  org.qt-project.QtWidgets      	0x000000010e6508d0 QAbstractButton::event(QEvent*) + 160
      39  org.qt-project.QtWidgets      	0x000000010e55ee5a QApplicationPrivate::notify_helper(QObject*, QEvent*) + 314
      40  org.qt-project.QtWidgets      	0x000000010e562073 QApplication::notify(QObject*, QEvent*) + 8163
      41  org.qt-project.QtCore         	0x000000010f3fd9e4 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164
      42  org.qt-project.QtWidgets      	0x000000010e55f7ca QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) + 874
      43  org.qt-project.QtWidgets      	0x000000010e5c0d46 QWidgetWindow::handleMouseEvent(QMouseEvent*) + 1382
      44  org.qt-project.QtWidgets      	0x000000010e5bfdfb QWidgetWindow::event(QEvent*) + 235
      45  org.qt-project.QtWidgets      	0x000000010e55ee5a QApplicationPrivate::notify_helper(QObject*, QEvent*) + 314
      46  org.qt-project.QtWidgets      	0x000000010e56028e QApplication::notify(QObject*, QEvent*) + 510
      47  org.qt-project.QtCore         	0x000000010f3fd9e4 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164
      48  org.qt-project.QtGui          	0x000000010ec734ed QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 2877
      49  org.qt-project.QtGui          	0x000000010ec5bbdb QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 203
      50  libqcocoa.dylib               	0x0000000112b3aa91 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 33
      51  com.apple.CoreFoundation      	0x00007fff88d5d881 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
      52  com.apple.CoreFoundation      	0x00007fff88d3cfbc __CFRunLoopDoSources0 + 556
      53  com.apple.CoreFoundation      	0x00007fff88d3c4df __CFRunLoopRun + 927
      54  com.apple.CoreFoundation      	0x00007fff88d3bed8 CFRunLoopRunSpecific + 296
      55  com.apple.HIToolbox           	0x00007fff8e5b1935 RunCurrentEventLoopInMode + 235
      56  com.apple.HIToolbox           	0x00007fff8e5b1677 ReceiveNextEventCommon + 184
      57  com.apple.HIToolbox           	0x00007fff8e5b15af _BlockUntilNextEventMatchingListInModeWithFilter + 71
      58  com.apple.AppKit              	0x00007fff95eb3df6 _DPSNextEvent + 1067
      59  com.apple.AppKit              	0x00007fff95eb3226 -[NSApplication _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 454
      60  com.apple.AppKit              	0x00007fff96122a82 -[NSApplication _doModalLoop:peek:] + 653
      61  com.apple.AppKit              	0x00007fff96304530 __33-[NSApplication runModalSession:]_block_invoke + 80
      62  com.apple.AppKit              	0x00007fff963043f0 -[NSApplication runModalSession:] + 148
      63  libqcocoa.dylib               	0x0000000112b398da QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 1978
      64  org.qt-project.QtCore         	0x000000010f3f9bc1 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 417
      65  org.qt-project.QtWidgets      	0x000000010e7623b9 QDialog::exec() + 377
      66  libCore_debug.dylib           	0x0000000115bcd67f Core::Internal::SettingsDialog::execDialog() + 495 (settingsdialog.cpp:722)
      67  libCore_debug.dylib           	0x0000000115aff267 Core::Internal::MainWindow::showOptionsDialog(Core::Id, QWidget*) + 87 (mainwindow.cpp:845)
      68  libCore_debug.dylib           	0x0000000115b01c34 Core::Internal::MainWindow::registerDefaultActions()::$_5::operator()() const + 52 (mainwindow.cpp:655)
      69  libCore_debug.dylib           	0x0000000115b01be9 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Core::Internal::MainWindow::registerDefaultActions()::$_5>::call(Core::Internal::MainWindow::registerDefaultActions()::$_5&, void**) + 25 (qobjectdefs_impl.h:135)
      70  libCore_debug.dylib           	0x0000000115b01ba1 void QtPrivate::Functor<Core::Internal::MainWindow::registerDefaultActions()::$_5, 0>::call<QtPrivate::List<>, void>(Core::Internal::MainWindow::registerDefaultActions()::$_5&, void*, void**) + 33 (qobjectdefs_impl.h:193)
      71  libCore_debug.dylib           	0x0000000115b01b2d QtPrivate::QFunctorSlotObject<Core::Internal::MainWindow::registerDefaultActions()::$_5, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 141 (qobject_impl.h:170)
      72  org.qt-project.QtCore         	0x000000010f430d1a QMetaObject::activate(QObject*, int, int, void**) + 2538
      73  org.qt-project.QtWidgets      	0x000000010e555be0 QAction::triggered(bool) + 64
      74  libUtils_debug.4.1.0.dylib    	0x000000010e1e182a QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, void (QAction::*)(bool)>::call(void (QAction::*)(bool), QAction*, void**) + 138 (qobjectdefs_impl.h:141)
      75  libUtils_debug.4.1.0.dylib    	0x000000010e1e1770 void QtPrivate::FunctionPointer<void (QAction::*)(bool)>::call<QtPrivate::List<bool>, void>(void (QAction::*)(bool), QAction*, void**) + 80 (qobjectdefs_impl.h:161)
      76  libUtils_debug.4.1.0.dylib    	0x000000010e1e1696 QtPrivate::QSlotObject<void (QAction::*)(bool), QtPrivate::List<bool>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 166 (qobject_impl.h:121)
      77  org.qt-project.QtCore         	0x000000010f430d1a QMetaObject::activate(QObject*, int, int, void**) + 2538
      78  org.qt-project.QtWidgets      	0x000000010e555a07 QAction::activate(QAction::ActionEvent) + 263
      79  org.qt-project.QtCore         	0x000000010f430f59 QMetaObject::activate(QObject*, int, int, void**) + 3113
      80  org.qt-project.QtCore         	0x000000010f4291c2 QObject::event(QEvent*) + 146
      81  org.qt-project.QtWidgets      	0x000000010e55ee5a QApplicationPrivate::notify_helper(QObject*, QEvent*) + 314
      82  org.qt-project.QtWidgets      	0x000000010e56028e QApplication::notify(QObject*, QEvent*) + 510
      83  org.qt-project.QtCore         	0x000000010f3fd9e4 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164
      84  org.qt-project.QtCore         	0x000000010f3fe74b QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 891
      85  libqcocoa.dylib               	0x0000000112b3a1de QCocoaEventDispatcherPrivate::processPostedEvents() + 190
      86  libqcocoa.dylib               	0x0000000112b3aa91 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 33
      87  com.apple.CoreFoundation      	0x00007fff88d5d881 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
      88  com.apple.CoreFoundation      	0x00007fff88d3cfbc __CFRunLoopDoSources0 + 556
      89  com.apple.CoreFoundation      	0x00007fff88d3c4df __CFRunLoopRun + 927
      90  com.apple.CoreFoundation      	0x00007fff88d3bed8 CFRunLoopRunSpecific + 296
      91  com.apple.HIToolbox           	0x00007fff8e5b1935 RunCurrentEventLoopInMode + 235
      92  com.apple.HIToolbox           	0x00007fff8e5b1677 ReceiveNextEventCommon + 184
      93  com.apple.HIToolbox           	0x00007fff8e5b15af _BlockUntilNextEventMatchingListInModeWithFilter + 71
      94  com.apple.AppKit              	0x00007fff95eb3df6 _DPSNextEvent + 1067
      95  com.apple.AppKit              	0x00007fff95eb3226 -[NSApplication _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 454
      96  com.apple.AppKit              	0x00007fff95ea7d80 -[NSApplication run] + 682
      97  libqcocoa.dylib               	0x0000000112b399af QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2191
      98  org.qt-project.QtCore         	0x000000010f3f9bc1 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 417
      99  org.qt-project.QtCore         	0x000000010f3fe055 QCoreApplication::exec() + 341
      100 org.qt-project.qtcreator      	0x000000010dfbeb94 main + 12948 (main.cpp:539)
      101 libdyld.dylib                 	0x00007fff98ea05ad start + 1
      

        For Gerrit Dashboard: QTCREATORBUG-16760
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes