QMake: Fix crash when removing Qt version from kit

Fix crash when removing Qt version from kit while a qmake project
is open.

Task-number: QTCREATORBUG-16760
Change-Id: I697eceb6b165985ae9a225e79bf1205947300954
Reviewed-by: Eike Ziller <eike.ziller@qt.io>